AccessibilityTable::m_isExposable is never recomputed after AccessibilityTable::init https://bugs.webkit.org/show_bug.cgi?id=240750

Reviewed by Andres Gonzalez.

AccessibilityTable::m_isExposable is never recomputed after
AccessibilityTable::init. This is bad because the semantics of table,
and the semantics of the table cells in the table, are dependent on
whether the table is exposed.

With this commit, we recompute m_isExposable when a table's row count
changes. This commit also updates the isolated tree for row count
changes, meaning we handle dynamic aria-rowcount value modifications.

Test: accessibility/table-exposure-updates-dynamically.html.
Also added another testcase to accessibility/aria-table-attributes.html.

* LayoutTests/accessibility/aria-table-attributes-expected.txt:
* LayoutTests/accessibility/aria-table-attributes.html: Add testcase.
* LayoutTests/accessibility/table-exposure-updates-dynamically-expected.txt: Added.
* LayoutTests/accessibility/table-exposure-updates-dynamically.html: Added.
* LayoutTests/platform/glib/accessibility/table-exposure-updates-dynamically-expected.txt: Added.
* LayoutTests/platform/ios/TestExpectations: Enable new test.
* LayoutTests/platform/ios/accessibility/table-exposure-updates-dynamically-expected.txt: Added.
* LayoutTests/platform/win/TestExpectations: Disable new test.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::remove):
(WebCore::AXObjectCache::childrenChanged):
(WebCore::AXObjectCache::handleRowCountChanged): Added.
(WebCore::AXObjectCache::handleAriaExpandedChange):
(WebCore::AXObjectCache::handleAttributeChange):
(WebCore::filterWeakHashSetForRemoval):
(WebCore::AXObjectCache::prepareForDocumentDestruction):
(WebCore::AXObjectCache::performDeferredCacheUpdate):
(WebCore::AXObjectCache::updateIsolatedTree):
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebCore/accessibility/AccessibilityTable.cpp:
(WebCore::AccessibilityTable::recomputeIsExposable): Added.
(WebCore::AccessibilityTable::updateChildrenRoles): Added.
(WebCore::AccessibilityTable::addChildren):
* Source/WebCore/accessibility/AccessibilityTable.h:
* Source/WebCore/html/HTMLTablePartElement.h:
Moved findParentTable from protected to public so it can be called from
accessibility code.

Canonical link: https://commits.webkit.org/251005@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294875 268f45cc-cd09-0410-ab3c-d52691b4dbfc